force-app/main/default/objects/Attendee__c/Attendee__c.object-meta.xml
<CustomObject>
    <label>Carlyle Internal Attendee</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Carlyle Internal Attendees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>