force-app/main/default/objects/Attendee__c/fields/Attendee__c.field-meta.xml
<CustomField>
    <fullName>Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendee</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>User.FirstName</field>
            <operation>notContain</operation>
            <value>LW</value>
        </filterItems>
        <filterItems>
            <field>User.FirstName</field>
            <operation>notContain</operation>
            <value>LeaseWorks</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>