force-app/main/default/objects/Attendee__c/fields/Interaction_Log__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interaction Log</label>
    <referenceTo>leaseworks__Customer_Interaction_Log__c</referenceTo>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>