force-app/main/default/objects/Attendee__c/fields/Unique_id__c.field-meta.xml
<CustomField>
    <fullName>Unique_id__c</fullName>
    <formula>Attendee__c&amp;Interaction_Log__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique_id</label>
    <type>Text</type>
</CustomField>